# open_spiel

./: .gitignore  mabcStore.cc  posg_from_file.cc  posg_from_file.h  posg_from_file_store.cc  tmp.txt
madp-0.4.1/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool
madp-0.4.1/autom4te.cache/: output.1  requests  traces.0  traces.1
madp-0.4.1/src/: Makefile  Makefile.in
open_spiel/: CMakeLists.txt  spiel.h
open_spiel/algorithms/: CMakeLists.txt  best_response.cc  cfr.cc  history_tree.cc  tabular_exploitability.cc  trajectories_test.cc
open_spiel/examples/: a.out  adversarial_tiger.dpomdp  boundsH6.txt  cfr_example.cc  competitive_tiger.dpomdp  compilation.txt  log.txt  logAdvTigerH2Cfr.txt  logAdvTigerH2m10.txt  logAdvTigerH3Cfr.txt  logAdvTigerH3m10.txt  logAdvTigerH4m10.txt  logCompetitiveH2m10.txt  logCompetitiveTigerH2.txt  logMPH4m10.txt  logMPH5m10.txt  logMPH6h1.txt  logMabcH2Cfr.txt  logMabcH2m10.txt  logMabcH3.txt  logMabcH3Cfr.txt  logMabcH3m10.txt  logMabcH4m10.txt  logRecyclingH2Cfr.txt  logRecyclingH2m10.txt  logRecyclingH3Cfr.txt  logRecyclingH3m10.txt  logcfr.txt  logposg.txt  mabc.dpomdp  mabcStore2.cc  matching_pennies.dpomdp  outcomes2.txt  pomdpH6.txt  prob.txt  prob2.txt  probObscfr.txt  probmabc.txt  probposg.txt  recycling.dpomdp  (+8 more)
open_spiel/games/: CMakeLists.txt  mabc.cc  mabc.h  matching_pennies.cc  matching_pennies.dpomdp  matching_pennies.h  posg_from_file.cc
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  ex-algo-hsvi.cpp  ex-compute-br.cpp  ex-hsvi.cpp  test-lp_last_step.cpp
(+744 files in other folders)
